python-web-server/tests/requests/invalid/020.py
from web_server.config import MessageConfig
from web_server.http.errors import InvalidHeaderName

cfg = MessageConfig.default()
request = InvalidHeaderName
